--- a/03-SOM/source.tex
+++ b/03-SOM/source.tex
@@ -3,6 +3,8 @@
 \ifSubfilesClassLoaded{
     \dominitoc
     \tableofcontentsfile
+    \setcounter{page}{1} 
+    \setcounter{chapter}{1}
 }{}
 \begin{document}
 \chapter{Modèle d'architecture CxSOM}
