--- a/05-Indicateur/source.tex
+++ b/05-Indicateur/source.tex
@@ -5,7 +5,7 @@
     \tableofcontentsfile
     \pagenumbering{arabic}
     \setcounter{page}{1}
-    \setcounter{chapter}{4}
+    \setcounter{chapter}{5}
 }{}
 \begin{document}
 \chapter{Indicateurs statistiques de l'apprentissage des données multimodales\label{chap:indicateur}}
@@ -47,7 +47,7 @@ Il est défini par~:
 \end{equation}
 
 Nous détaillerons le calcul de ce coefficient dans la suite de ce chapitre. Notons seulement que la fonction $\varphi(x) = \mathbb{E}(Y|X = x)$, utilisée pour le calcul de $Var(Y|X)$, est la fonction approximant le mieux les valeurs des paires $(X,Y)$ au sens des moindres carrés. Cette fonction est tracée en rouge sur la figure~\ref{fig:signaux}
-Le ratio de corrélation mesure alors la qualité de cette approximation. Il vaut 1 si $Y$ est une fonction de $X$ et 0 si les variables sont complètement indépendantes. 
+Le ratio de corrélation mesure alors la qualité de cette approximation. Il vaut 1 si $Y$ est une fonction de $X$ et 0 si les variables sont complètement indépendantes, car dans ce cas $Var(Y|X) = Var(Y)$.
 
 Enfin, l'information mutuelle, contrairement aux mesures présentées ci-dessus, est une grandeur probabiliste.
 Elle évalue une relation quelconque et non seulement fonctionnelle entre les distributions des variables $X$ et $Y$. Elle vaut 0 si et seulement si les variables sont indépendantes et est maximale lorsque qu'il existe une bijection entre les deux variables aléatoires.
@@ -147,7 +147,7 @@ Le ratio de corrélation traduit correctement cette proximité et est plus élev
          & $\eta(U;\inpx\m{1})$ & $\eta(U;\inpx\m{2})$  & $\eta(U;\bmu\m{1})$ & $\eta(U;\bmu\m{2})$  & $\eta(U;\bmu\m{1})$ & $\eta(U;\bmu\m{2})$ \\    
         \midrule
         Cercle &   $0.45 $    & $0.84$  &  $0.98$ & $0.99$ & $0.49$ & $0.84$      \\
-        Anneau &  $0.43$      &  $0.83$      & $0.97$ & $0.93$ & $0.44$ & $0.98$ \\
+        Anneau &  $0.43$      &  $0.83$      & $0.97$ & $0.93$ & $0.44$ & $0.82$ \\
         Lissajous &  $0.81$     &  $0.80$ & $0.96$ & $0.94$  & & \\
         \bottomrule
     \end{tabular}
